--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,11 @@
             android:text="/"
             android:id="@+id/btn_div"/>
     </LinearLayout>
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="#B17E00"
+        android:id="@+id/resultTv"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
